--- a/tronprint_stats.yml
+++ b/tronprint_stats.yml
@@ -1,10 +1,10 @@
 ---
 cs-website/application/cpu_time:
-  value: 47.89000000000001
+  value: 22.64
 cs-website/application/cpu_time/by_date/2012:
-  value: 10.14
+  value: 52.739999999999995
 cs-website/application/cpu_time/by_date/2012/02:
-  value: 10.14
+  value: 24.860000000000003
 cs-website/application/cpu_time/by_date/2012/02/08:
   value: 11.31000000000001
 cs-website/application/cpu_time/by_date/2012/02/08/15:
@@ -12,11 +12,11 @@ cs-website/application/cpu_time/by_date/2012/02/08/15:
 cs-website/application/cpu_time/hourly/15:
   value: 50.209999999999994
 cs-website/requests:
-  value: 907
+  value: 990
 cs-website/requests/by_date/2012:
-  value: 182
+  value: 19
 cs-website/requests/by_date/2012/02:
-  value: 183
+  value: 19
 cs-website/requests/by_date/2012/02/08:
   value: 37
 cs-website/requests/by_date/2012/02/08/15:
@@ -28,7 +28,7 @@ cs-website/requests/by_date/2012/02/08/16:
 cs-website/requests/hourly/16:
   value: 36
 cs-website/requests/by_date/2012/02/09:
-  value: 12
+  value: 77
 cs-website/requests/by_date/2012/02/09/05:
   value: 64
 cs-website/requests/hourly/05:
@@ -42,9 +42,17 @@ cs-website/requests/by_date/2012/02/09/07:
 cs-website/requests/hourly/07:
   value: 3
 cs-website/application/cpu_time/by_date/2012/02/09:
-  value: 128.73
+  value: 3.769999999999996
 cs-website/application/cpu_time/by_date/2012/02/09/07:
-  value: 12.519999999999996
+  value: 27.379999999999995
 cs-website/application/cpu_time/hourly/07:
-  value: 36.910000000000004
+  value: 51.77
 value: 75.78
+cs-website/application/cpu_time/by_date/2012/02/09/08:
+  value: 3.769999999999996
+cs-website/application/cpu_time/hourly/08:
+  value: 75.84000000000003
+cs-website/requests/by_date/2012/02/09/08:
+  value: 19
+cs-website/requests/hourly/08:
+  value: 3
